Update: Fixed Footer alignment and made Posts align properly within Blog to match Footer.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -93,7 +93,7 @@ animation: jello 0.6s ease-in-out;
     margin-right: 5vw;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     background-color: var(--primary-background-color);
 }
 
@@ -101,7 +101,7 @@ animation: jello 0.6s ease-in-out;
     width: 90%;
     background-color: var(--blog_box-color);
     margin-bottom: 75px;
-    margin-right: 30vw;
+    margin-right: 0;
     border-radius: 4px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
 }
@@ -231,6 +231,14 @@ span.song_artist {
     font-size: calc(0.6rem + .4vw);
     color: var(--primary-a-color);
     line-height: 1;
+}
+
+span.footer {
+    font-size: calc(0.2rem + .4vw);
+    color: var(--primary-a-color);
+    padding: 1rem;
+    display: flex; 
+    justify-content: center
 }
 
 h1 {
